# bender-ros

./: .gitignore  .gitmodules  README.md
bender_base/: CMakeLists.txt  README.md  package.xml
bender_base/config/: bender.rviz  bender_controllers.yaml  plotjuggler_pid_view.xml  serial_debug.xml
bender_base/include/bender_base/: bender_hardware.h  hardware_interface.h
bender_base/launch/: base.launch
bender_base/scripts/: 71-can-interface.rules  can0-bringup  can0_udev.sh  joy_udev.sh  teensy_udev.sh
bender_base/src/: bender_base.cpp  bender_hardware.cpp  hardware_interface.cpp
bender_description/: CMakeLists.txt  package.xml
bender_description/launch/: description.launch
bender_description/urdf/: bender.gazebo  bender.urdf.xacro
bender_description/urdf/sensors/: _d435.gazebo.xacro  _d435.urdf.xacro  logitech_c910.xacro  raspi_camera.xacro  rplidar.xacro  sonar_hc-sr04.xacro
bender_estop/: platformio.ini
bender_estop/src/: main.cpp
bender_firmware/: .gitignore  README.md  platformio.ini
bender_firmware/lib/: README
bender_firmware/lib/angles/: angles.h
bender_firmware/lib/bender_hardware/: bender_joints.cpp  bender_joints.h  pid.cpp  pid.h  position_joint.h  velocity_joint.h
bender_firmware/lib/bender_joints/: bender_joints.cpp  bender_joints.h
bender_firmware/lib/bender_utils/: bender_utils.cpp  bender_utils.h
bender_firmware/lib/pid/: pid.cpp  pid.h
bender_firmware/src/: main.cpp
bender_gazebo/: CMakeLists.txt  package.xml
bender_gazebo/config/: bender.rviz  bender_camera_debug.rviz  bender_controllers.yaml  bender_empty_box.rviz  bender_groundtruth.rviz  bender_nav.rviz
bender_gazebo/launch/: base.launch  bender.launch  empty_world.launch  free_nav.launch  garage.launch  generate_igvc_map.launch  simple_nav.launch
bender_gazebo/maps/: empty_box.yaml  igvc_basic_lanes.yaml  igvc_basic_obstacles.pgm  igvc_basic_obstacles.yaml
bender_gazebo/models/: install_models.sh
bender_gazebo/models/igvc_basic_ground/materials/scripts/: igvc_basic_ground.material
bender_gazebo/scripts/: tf_ground_truth
bender_gazebo/worlds/: README.md  igvc_basic.world  igvc_basic_map_saver.world  parking_garage.world
bender_hardware/: CMakeLists.txt  README.md  package.xml
bender_hardware/include/: bender_hardware.h
bender_hardware/src/: bender_hardware.cpp
bender_localization/: CMakeLists.txt  package.xml
bender_localization/config/: odom_compare.rviz
bender_localization/launch/: hardware_bringup.launch  localization.launch  localization_all.launch  localization_global.launch  localization_local.launch  px4_bringup.launch
bender_localization/params/: dual_ekf_navsat.yaml  dual_ekg_navsat.yaml  global_ekf.yaml  local_ekf.yaml  local_se.rviz  px4_config.yaml  px4_pluginlists.yaml  se.rviz
bender_localization/scripts/: px4_udev.sh
bender_mission/: CMakeLists.txt  package.xml  setup.py
bender_mission/launch/: bender_mission.launch
bender_mission/params/: igvc.yaml
bender_mission/src/bender_mission/: commander.py
bender_nav/: CMakeLists.txt  package.xml
bender_nav/config/: hardware-nav.rviz  odom_debug.xml
bender_nav/launch/: minimal.launch  move_base.launch  move_basic.launch
bender_nav/param/: amcl_params.yaml  base_global_planner_param.yaml  base_global_planner_params.yaml  base_local_planner_param.yaml  base_local_planner_params.yaml  base_local_planner_params_dcfg.yaml  costmap_common_param.yaml  costmap_common_params.yaml  global_costmap_param.yaml  global_costmap_params.yaml  local_costmap_param.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
bender_navsensors/: CMakeLists.txt  package.xml  setup.py
bender_navsensors/launch/: base.launch  navsensors.launch
bender_navsensors/src/: bender_gps_distance  bender_navsensors.cpp  gps.py  imu.py  test.py
bender_perception/: CMakeLists.txt  package.xml
bender_perception/cfg/: BenderPerception.cfg
bender_perception/config/: bender_vision.yaml  bender_vision_gazebo.yaml  bender_vision_usb_camera.yaml  blackfly_camera_params.yaml  debug.rviz  lidar_view.rviz  rqt_gui.perspective  scan_filter_config.yaml  usb_camera_params.yaml
bender_perception/config/camera_info/: 19292976.yaml  19292976_medium.yaml  19292976_wide.yaml  usb_camera_info.yaml  usb_camera_info_wide.yaml
bender_perception/include/bender_perception/: bitarray_to_laserscan.h  lidar.h  vision.h
bender_perception/launch/: blackfly_camera.launch  blackfly_camera_calib.launch  image_file.launch  playback.launch  rplidar.launch  usb_camera.launch  usb_camera_calib.launch  vision.launch
bender_perception/scripts/: flir_network_config.sh  logitech_webcam_udev.sh
bender_perception/src/: bender_perception.cpp  bitarray_to_laserscan.cpp  lidar.cpp  perception_node.cpp  vision.cpp
bender_robot/: CMakeLists.txt  package.xml
bender_teensy/: README.md
bender_teensy/lib/: README
media/scripts/: ffmpeg_record_resize.sh
rosinfo/: frames.gv
rpisys/: README.md
rpisys/etc/netplan/: 10-static-network-config.yaml
rpisys/etc/udev/rules.d/: 10-all-js-f710.rules  10-logitech-js-f710.rules  10-pixhawk-px4.rules
rpisys/scripts/: crontab  startup.sh
