<?xml version="1.0"?>
<package format="2">
  <name>bender_base</name>
  <version>0.0.0</version>
  <description>The bender_base package</description>

  <maintainer email="viprobotics@boisestate.edu">Boise State VIP Robotics</maintainer>
  <author email="vip-robotics@boisestate.edu">Wankun Sirichotiyakul</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rosserial_server</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>rosserial_server</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rosserial_server</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <depend>odrive_can_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
