<?xml version="1.0"?>
<package format="2">
  <name>bender_gazebo</name>
  <version>0.4.3</version>
  <description>The bender_gazebo package</description>

  <maintainer email="viprobotics@boisestate.edu">Wankun Sirichotiyakul</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>bender_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>swerve_controller</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
