<?xml version="1.0"?>
<package format="2">
  <name>bender_localization</name>
  <version>0.0.0</version>
  <description>The bender_localization package</description>

  <maintainer email="viprobotics@boisestate.edu">Boise State VIP Robotics</maintainer>
  <license>TODO</license>
  <author email="wankunsirichotiyakul@u.boisestate.edu">Wankun Sirichotiyakul</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
  </export>
</package>
