<?xml version="1.0"?>
<package format="2">
  <name>bender_mission</name>
  <version>0.0.0</version>
  <description>The bender_mission package</description>

  <maintainer email="bender@todo.todo">bender</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
