<?xml version="1.0"?>
<package format="2">
  <name>bender_nav</name>
  <version>0.4.3</version>
  <description>The bender_nav package</description>

  <maintainer email="viprobotics@boisestate.edu">Boise State VIP Robotics</maintainer>
  <author email="vip-robotics@boisestate.edu">Wankun Sirichotiyakul</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>navigation</build_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>map_server</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
