<?xml version="1.0"?>
<package format="2">
  <name>bender_navsensors</name>
  <version>1.0.0</version>
  <description>The bender_navsensors package</description>

  <maintainer email="viprobotics@boisestate.edu">Boise State VIP Robotics</maintainer>
  <author email="matthewoberg@u.boisestate.edu">Matthew Oberg</author>
  <author email="camroncollinswor@u.boisestate.edu">camron</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mavros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <export>
  </export>
</package>

