<?xml version="1.0"?>
<package format="2">
  <name>bender_robot</name>
  <version>0.4.3</version>
  <description>The bender_robot package</description>
  
  <maintainer email="viprobotics@gmail.com">Wankun Sirichotiyakul</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>bender_description</exec_depend>
  <exec_depend>bender_gazebo</exec_depend>
  <exec_depend>bender_nav</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
