<?xml version="1.0"?>
<package format="2">
  <name>bender_robot</name>
  <version>0.4.3</version>
  <description>The bender_robot package</description>
  
  <maintainer email="viprobotics@boisestate.edu">Boise State VIP Robotics</maintainer>
  <author email="vip-robotics@boisestate.edu">Wankun Sirichotiyakul</author>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
